...
                                .padding(.horizontal, 45)
                                .fixedSize(horizontal: false, vertical: true)
                            }
                            .disabled(viewModel.departure.iata == "" || viewModel.arrival.iata == "")
                            .frame(maxWidth: 800)
                            .padding(.top, 20)
                            .accessibilityIdentifier("searchButton")
                            
                            AIPredictionView(viewModel: viewModel, triggerAI: $triggerAI, showAlertPrediction: $showAlertPrediction, navigationSplitViewVisibility: $navigationSplitViewVisibility)
                        }
                        .frame(maxWidth: 800)
                    }
                    .scrollClipDisabled(true)
...
        HStack {
            Text("Search Travel")
                .font(.system(size: 32).bold())
                .padding(.vertical)
                .fontWeight(.semibold)
                .frame(maxWidth: .infinity, alignment: .leading)
                .accessibilityIdentifier("travelSearchViewTitle")
            
            Spacer()
            
            if horizontalSizeClass == .compact {
                // iOS
                UserPreferencesButtonView(navigationPath: $navigationPath, isPresenting: $isPresenting)
...
                        .foregroundColor(viewModel.departure.cityName == "" ? .secondary : AppColors.mainColor)
                        .padding(EdgeInsets(top: 10, leading: 20, bottom: 10, trailing: 0))
                        .frame(maxWidth: .infinity, alignment: .leading)
                        .font(.title2)
                        .fontWeight(viewModel.departure.cityName == "" ? .light : .semibold)
                }
                .accessibilityIdentifier("departureButton")
            }
            .background(colorScheme == .dark ? Color(red: 48/255, green: 48/255, blue: 48/255) : Color(uiColor: .systemBackground))
            .cornerRadius(10)
        }
        .fullScreenCover(isPresented: $departureTapped ) {
            CompleterView(modelContext: modelContext, searchText: viewModel.departure.cityName,
...
                        .foregroundColor (viewModel.arrival.cityName == "" ? Color.secondary : triggerAI ? Color.white : AppColors.mainColor)
                        .padding(EdgeInsets(top: 10, leading: 20, bottom: 10, trailing: 0))
                        .frame(maxWidth: .infinity, alignment: .leading)
                        .font(.title2)
                        .fontWeight(viewModel.arrival.cityName == "" ? .light : .semibold)
                }
                .accessibilityIdentifier("destinationButton")
            }
            .background(triggerAI ? LinearGradient(gradient: Gradient(colors: [.green, .mint, .blue]), startPoint: .bottomLeading, endPoint: .topTrailing) : LinearGradient(gradient: Gradient(colors: [colorScheme == .dark ? Color(red: 48/255, green: 48/255, blue: 48/255) : Color.white]), startPoint: .bottomLeading, endPoint: .topTrailing))
            .cornerRadius(10)
        }
        .fullScreenCover(isPresented: $destinationTapped ) {
            CompleterView(modelContext: modelContext, searchText: viewModel.arrival.cityName,
...
